# fastapi-naive-admin

./: .env  .gitignore  .pdm-python  base.sql  main.py  o.py  pyproject.toml  test.py
.nicegui/: storage-user-5e87033d-72d0-4a30-b6bd-e338f477bb5a.json  storage-user-bbacbdfa-a781-43d2-80de-af894f927e84.json
apis/data_task/: annotation.py  annotation_task.py  data_task_urls.py  datasets.py
core/Events/: shutdown_events.py  start_events.py
core/Middleware/: RequestIpChaeckMiddleware.py
core/NiceguiWeb/: annotator.py  api.py  authentication.py  component.py  init.py  svg.py
core/NiceguiWeb/components/: __init__.py  interactive_image.py  interactive_image.vue
core/Routers/: routers.py
core/Security/: auth_jwt.py
extend/redis/: init.py
models/: __init__.py
models/annotation/: model.py
schemas/auth/: menus_schema.py  users_schema.py
schemas/data_task/: anntation_schema.py  dataset_schema.py  task_schema.py
tests/: svg_image.py
utils/: config.py  config_yaml_load.py
