[project]
name = "fastapi-naive-admin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "梁正鹏", email = "liangzhengpeng@hg-banner.com.cn"},
]
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
    "tortoise-orm[asyncmy]>=0.24.0",
    "loguru>=0.7.3",
    "nicegui>=2.11.1",
    "redis>=5.2.1",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "passlib>=1.7.4",
    "setuptools>=75.8.0",
    "python-jose[cryptography]>=3.4.0",
    "pycryptodome>=3.21.0",
    "fastapi-mail>=1.4.2",
    "pillow>=11.1.0",
    "pyotp>=2.9.0",
    "ldap3>=2.9.1",
    "IPy>=1.1",
    "argon2-cffi>=23.1.0",
    "broadcaster>=0.3.1"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = true

[tool.pdm.scripts]
dev = "python main.py"
